# CodeOfPracticePython

./: .flake8  .pre-commit-config.yaml  README.md  autoflacke.py  main.py  pyproject.toml
Unittest/: calc.py  employee.py  test_calc.py  test_employee.py
