[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry]
name = "project test"
version = "0.1.0"
description = "project of test to integration black and poetry"
authors = ["Autor <correo electrónico>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"